--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ app.init(container);          // initialize viewer
 init();                       // initialization for mobile template (in mobile.js)
 
 // load the scene
-app.loadSceneFile("./data/index/scene.js", function (scene) {
+app.loadSceneFile("https://github.com/hzpllzy/hzpllzy.github.io/raw/main/data/index/scene.js", function (scene) {
   // scene file has been loaded
   app.start();
 
